basic settings test

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,9 @@
 
             <div class="footer">
                 <p>
-                    <a href="http://dept.example.edu/">Illustrious Department</a>
-                    at the
-                    <a href="http://example.edu/">University of Example</a>
+                    <a href="http://lifs.hallym.ac.kr">Legal Informatics and Forensic Science Institute</a>
+                    at
+                    <a href="https://www.hallym.ac.kr">Hallym University</a>
                 </p>
             </div>
 
