fix pubs problems

--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -27,6 +27,9 @@
 				{{ entry.persons['author']|author_list }}.
 			</span><br />
 			<span class="venuetype">{{ entry|venue_type -}}</span><span class="venue">{{ entry|venue -}}</span>.
+			{%- if entry.fields['doi'] %}
+                            <span class="doi"><a href="https://doi.org/{{ entry.fields['doi'] }}">{{ entry.fields['doi'] }}<a/>.</span>
+                        {%- endif %}
 			{%- if entry.fields['note'] %}
 			<span class="note">
 			{{ entry.fields['note']|escape }}.
