Main RE site updates for people.

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -11,7 +11,7 @@
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<img src="img/pdficon_small.png" width="16"
+				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
 				<a href="https://doi.org/10.1016/j.diin.2013.06.001">A study of user data integrity during acquisition of Android devices</a>.
 			</span><br />
