--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,10 @@
                 <a href="{{ site.base }}/" class="">
                     <img src="{{ site.base }}/img/logo.png"
                          srcset="{{ site.base }}/img/logo@2x.png 2x"
-                         alt="Awesome" id="logo">
+                         alt="LIFS Logo" id="logo">
+                    <img src="{{ site.base }}/img/LIFSReGroupLogoSM.png"
+                         srcset="{{ site.base }}/img/LIFSReGroupLogoSM.png 2x"
+                         alt="LIFS Research Logo" id="logo">
                 </a>
                 <ul class="nav nav-pills justify-content-center">
 
