--- a/css/group.scss
+++ b/css/group.scss
@@ -53,8 +53,8 @@ a > .fa {
 
 /* Group logo */
 #logo {
-    width: 154px;
-    height: 35px;
+    /*width: 154px;*/
+    height: 50px;
     margin: 2px 0 8px 0;
 }
 
