add Hallym Logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
                     <img src="{{ site.base }}/img/LIFSReGroupLogoSM.png"
                          srcset="{{ site.base }}/img/LIFSReGroupLogoSM.png 2x"
                          alt="LIFS Research Logo" id="logo">
+                    <img src="{{ site.base }}/img/HallymLogo.png"
+                         srcset="{{ site.base }}/img/HallymLogo.png 2x"
+                         alt="Hallym University Logo" id="logo">
                 </a>
                 <ul class="nav nav-pills justify-content-center">
 
