change hallym link add alex photo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
                     <img src="{{ site.base }}/img/LIFSReGroupLogoSM.png"
                          srcset="{{ site.base }}/img/LIFSReGroupLogoSM.png 2x"
                          alt="LIFS Research Logo" id="logo">
+                </a>
+                <a href="https://www.hallym.ac.kr">
                     <img src="{{ site.base }}/img/HallymLogo.png"
                          srcset="{{ site.base }}/img/HallymLogo.png 2x"
                          alt="Hallym University Logo" id="logo">
