--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,6 +4,30 @@
 		<td>
 			<span class="date">
 				
+				<big><strong>2019</strong></big><br />
+				
+				
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart{\_}Home{\_}IoT{\_}Forensics.pdf">Smart Home IoT Forensics</a>.
+			</span><br />
+			<span class="authors">
+				Addisu Afework Birhanu.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			<span class="links">
+			</span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
 				<big><strong>2013</strong></big><br />
 				
 				
