--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -13,7 +13,7 @@
 			<span class="pubtitle">
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
-				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart{\_}Home{\_}IoT{\_}Forensics.pdf">Smart Home IoT Forensics</a>.
+				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf">Smart Home IoT Forensics</a>.
 			</span><br />
 			<span class="authors">
 				Addisu Afework Birhanu.
