--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -44,11 +44,11 @@
 				[<a href="{{ url|escape }}">{{ type|escape }}</a>]
 			{%- endfor %}
 				{%- if entry.fields['abstract'] %}
-				<button class="dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">abstract</button>]
+				<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">abstract</button>
 				{%- endif %}
 			</span>
 			{%- if entry.fields['abstract'] %}
-			<div id="abstract_{{entry.fields['key']}}" class="abstract" hidden>
+			<div id="abstract_{{entry.fields['key']}}" class="abstract" style="display: none;>
 			{{ entry.fields['abstract'] |escape }}
 			</div>
 			{%- endif %}
