fix pub formatting error

--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -43,14 +43,13 @@
 			{%- for type, url in (entry|extra_urls).iteritems() %}
 				[<a href="{{ url|escape }}">{{ type|escape }}</a>]
 			{%- endfor %}
-				{%- if entry.fields['abstract'] %}
-				<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">abstract</button>
-				{%- endif %}
 			</span>
 			{%- if entry.fields['abstract'] %}
-			<div id="abstract_{{entry.fields['key']}}" class="abstract" style="display: none;>
-			{{ entry.fields['abstract'] |escape }}
-			</div>
+				<span class="abstract">
+				<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">abstract</button>
+				<div id="abstract_{{entry.fields['key']}}" class="abstract" style="display: none;>
+					{{ entry.fields['abstract']|escape }}
+				</div>
 			{%- endif %}
 		</td>
 	</tr>
