--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -13,6 +13,9 @@
 			</span>
 		</td>
 		<td class="publication">
+			{% if entry.fields['keywords'] %}
+				<meta name="keywords" content="{{ entry.fields['keywords']}}">
+			{%- endif %}
 			{% if entry.fields['annote'] %}
 				<span class="language">[{{ entry.fields['annote'] }}] </span>
 			{%- endif %}
