--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -48,7 +48,7 @@
 				<span class="pub-meta">
 				<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">abstract</button>
 				{% if entry.fields['keywords'] %}
-					{% for keyword in entry.fields['keywords'] %}
+					{%- for keyword in entry.fields['keywords'] %}
 						<span class="badge badge-info">{{ keyword }}</span>
 					{%- endfor %}
 				{%- endif %}
