--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,27 @@
 <html>
     <head>
         <title>{{ site.name }}: {{ page.title }}</title>
+        <!-- OG info -->
+        <meta property="og:site_name" content="LIFS@Hallym"/>
+        <meta property="og:image" content="img/LIFSLogo.jpg">
+        <meta property="og:type" content="blog"/>
+        <meta property="og:title" content="{{ page.title }}"/>
+        <!-- Site metadata -->
+        <meda description="The homepage for the Legal Informatics and Forensic Science Institute at Hallym University. We list information about projects, research and students in the laboratory.">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <!--<link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
         <script src="https://kit.fontawesome.com/37cd757c77.js"></script>
         <link rel="stylesheet" href="{{ site.base }}/css/group.css">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144604008-3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-144604008-3');
+        </script>
     </head>
     <body>
         <div class="container">
