--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <title>{{ site.name }}: {{ page.title }}</title>
         <!-- OG info -->
         <meta property="og:site_name" content="LIFS@Hallym"/>
-        <meta property="og:image" content="img/LIFSLogo.jpg">
+        <meta property="og:image" content="img/LIFSReGroupLogo.png">
         <meta property="og:type" content="blog"/>
         <meta property="og:title" content="{{ page.title }}"/>
         <!-- Site metadata -->
