--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,7 @@
 
             <div class="footer">
                 <p>
+                    <a href="https://github.com/LIFSHallym"><span class='fab fa-github fa-lg'></span></a> | 
                     <a href="http://lifs.hallym.ac.kr">Legal Informatics and Forensic Science Institute</a>
                     at
                     <a href="https://www.hallym.ac.kr">Hallym University</a>
