--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
             {{ content }}
 
             <div class="footer">
-                <p>
+                <p stlye="padding: 10px;">
                     <a href="https://github.com/LIFSHallym"><span class='fab fa-github fa-lg'></span></a> | 
                     <a href="http://lifs.hallym.ac.kr">Legal Informatics and Forensic Science Institute</a>
                     at
