--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/37cd757c77.js"></script>
         <link rel="stylesheet" href="{{ site.base }}/css/group.css">
+        <!-- Validate -->
+        <meta name="msvalidate.01" content="674264E3052CA5543850A30C1855D52B" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144604008-3"></script>
         <script>
