--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="{{ site.base }}/css/group.css">
         <!-- Validate -->
         <meta name="msvalidate.01" content="674264E3052CA5543850A30C1855D52B" />
+        <meta name="yandex-verification" content="4057744cb4a9bfd1" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144604008-3"></script>
         <script>
