--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,17 @@
 ---
 layout: default
 ---
-<p class="date">{{ page.date | date: '%B %d, %Y' }}, {% include person.html person=page.author image=include.image %}</p>
+<p class="date">{{ page.date | date: '%B %d, %Y' }}</p>
+<p class="author">
+    {% person = page.author %}
+    {% include person.html person=person image=include.image %}</p>
+<p class="keywords">
+    {% if post.tags %}
+        {% for tag in post.tags %}
+            <a href="{{ site.base }}/tags/{{ tag }}">{{ tag }}</a></li>
+        {% endfor %}
+    {% endif %}
+</p>
 
 <div class="post">
 {{ content }}
