--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<p class="date">{{ page.date | date: '%B %d, %Y' }}</p>
+<p class="date">{{ page.date | date: '%Y-%m-%d' }}</p>
 <p class="author">
     {% assign person = page.author %}
     {% include person.html person=person image=include.image %}</p>
 <p class="keywords">
-    {% if post.tags %}
-        {% for tag in post.tags %}
-            <a href="{{ site.base }}/tags/{{ tag }}">{{ tag }}</a></li>
+    {% if page.tags %}
+        {% for tag in page.tags %}
+            <a href="{{ site.base }}/tags#{{ tag }}">{{ tag }}</a></li>
         {% endfor %}
     {% endif %}
 </p>
