--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="blog"/>
         <meta property="og:title" content="{{ page.title }}"/>
         <!-- Site metadata -->
-        <meda description="The homepage for the Legal Informatics and Forensic Science Institute at Hallym University. We list information about projects, research and students in the laboratory.">
+        <meta description="The homepage for the Legal Informatics and Forensic Science Institute at Hallym University. We list information about projects, research and students in the laboratory.">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
