fix footer and author profile

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,10 +14,8 @@ layout: default
 <p class="author">
     {% for item in site.data.people %}
         {% assign person = item[1] %}
-            <h3>{{ person }}</h3>
-            <h2>{{ item[0] }}</h2>
         {% if item[0] == page.author %}
-            {% include person.html person=person image=include.image %}
+            {% include person.html person=person image=true %}
         {% endif %}
     {% endfor %}
 </p>
