update link icons test2

--- a/_includes/person-image.html
+++ b/_includes/person-image.html
@@ -34,11 +34,11 @@ text-decoration hack is for Safari. We don't SVGs to be underlined.
     {% endcapture %}
 {% endif %}
 
-<!--{% if person.webpage %}
+{% if person.webpage %}
     <a href="{{ person.webpage | escape }}"
        style="text-decoration: none">
         {{ image }}
     </a>
-{% else %} -->
+{% else %}
     {{ image }}
-<!--{% endif %}-->
+{% endif %}
