--- a/_includes/person.html
+++ b/_includes/person.html
@@ -21,7 +21,8 @@ there by default by Bootstrap columns.
 
 {% if person.webpage %}
     {% capture name %}
-        <a href="{{ person.webpage | escape }}"> {{ person.display_name }} </a>
+        <!--<a href="{{ person.webpage | escape }}"> {{ person.display_name }} </a>-->
+        {{ person.display_name }}
     {% endcapture %}
 {% else %}
     {% assign name = person.display_name %}
