--- a/_includes/person.html
+++ b/_includes/person.html
@@ -83,7 +83,7 @@ there by default by Bootstrap columns.
             <a href="{{ person.youtube }}"><span class="fab fa-youtube"></span></a>
         {% endif %}
         {% if person.email %}
-            <a href="{{ person.email }}"><span class="fab fa-envelope"></span></a>
+            <a href="{{ person.email }}"><span class="fas fa-envelope"></span></a>
         {% endif %}
         {% if person.bio %}
             <span class="bio">{{person.bio}}</span>
