--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -13,7 +13,7 @@
 			
 				<span class="language">[English] </span>
 			<span class="pubtitle">
-				<a href="/publications/2019-Smart_Home_IoT_Forensics<span class="fas fa-globe"></span>
+				<a href="/publications/2019-Smart_Home_IoT_Forensics<span class="fas fa-globe"></span></a>
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
 				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf">Smart Home IoT Forensics</a>.
@@ -60,7 +60,7 @@
 			
 				<span class="language">[English] </span>
 			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic<span class="fas fa-globe"></span>
+				<a href="/publications/2019-A_Study_on_Internet_of_Things_(IoT)_Forensic<span class="fas fa-globe"></span></a>
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
 				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Subong-A_Study_on_Internet_of_Things_Forensics.pdf">A Study on Internet of Things (IoT) Forensic</a>.
@@ -104,7 +104,7 @@
 			
 				<span class="language">[English] </span>
 			<span class="pubtitle">
-				<a href="/publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments<span class="fas fa-globe"></span>
+				<a href="/publications/2019-API-Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments<span class="fas fa-globe"></span></a>
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
 				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Yohannes-API_Based_Cloud_Data_Acquisition_and_Analysis_from_Smart_Home_IoT_Environments.pdf">API-Based Cloud Data Acquisition and Analysis from Smart Home IoT Environments</a>.
@@ -148,7 +148,7 @@
 			
 				<span class="language">[English] </span>
 			<span class="pubtitle">
-				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria<span class="fas fa-globe"></span>
+				<a href="/publications/2019-A_Study_on_MLA_Request_Effectiveness_on_Cybercrime_Investigation_in_Nigeria<span class="fas fa-globe"></span></a>
 				<img src="/img/pdficon_small.png" width="16"
 					height="16" alt="PDF" />
 				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Betty-A_Study_on_MLA_Request_Effectiveness.pdf">A Study on MLA Request Effectiveness on Cybercrime Investigation in Nigeria</a>.
