--- a/bib/singlePage.tmpl
+++ b/bib/singlePage.tmpl
@@ -2,6 +2,18 @@
 <tbody>
 {%- set prev_year = 1900 %}
 {%- for entry in entries %}
+    <!-- Metadata for indexing -->
+	<meta name="citation_title" content="{{ entry|title }}">
+	{% for author in entry.persons['author'] %}
+		<meta name="citation_author" content="{{ author }}">
+	{% endfor %}
+	<meta name="citation_publication_date" content="{{ entry.fields['year'] }}">
+	<meta name="citation_pdf_url" content="{{ entry.fields['url'] }}">
+	{% if entry.fields['school'] %}
+		<meta name="citation_dissertation_institution" content="{{ entry.fields['school'] }}">
+	{% endif %}
+
+	
 	<tr>
 		<td>
 			<span class="date">
@@ -54,8 +66,7 @@
 			<br />
 			<span class="abstract">
 			{%- if entry.fields['abstract'] %}
-				<button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">abstract</button>
-				<div id="abstract_{{entry.fields['key']}}" class="abstract" style="display: none;">
+				<div id="abstract_{{entry.fields['key']}}" class="abstract">
 					{{ entry.fields['abstract'] |escape }}
 				</div>
 			{%- endif %}
