--- a/bib/singlePage.tmpl
+++ b/bib/singlePage.tmpl
@@ -8,7 +8,7 @@
 	<meta name="citation_publication_date" content="{{ entry.fields['year'] }}">
 	{% if entry.fields['school'] %}<meta name="citation_dissertation_institution" content="{{ entry.fields['school'] }}">{% endif %}
 	{% if entry.fields['doi'] %}<meta name="citation_doi" content="{{ entry.fields['doi'] }}">{% endif %}
-	{% if entry.fields['annote'] %}<meta name=""citation_language"" content="{{ entry.fields['annote'] }}">{%- endif %}
+	{% if entry.fields['annote'] %}<meta name="citation_language" content="{{ entry.fields['annote'] }}">{%- endif %}
 	
 	<tr>
 		<td>
