--- a/bib/singlePage.tmpl
+++ b/bib/singlePage.tmpl
@@ -8,7 +8,10 @@
 	<meta name="citation_publication_date" content="{{ entry.fields['year'] }}">
 	{% if entry.fields['school'] %}<meta name="citation_dissertation_institution" content="{{ entry.fields['school'] }}">{% endif %}
 	{% if entry.fields['doi'] %}<meta name="citation_doi" content="{{ entry.fields['doi'] }}">{% endif %}
+	{% if entry.fields['url'] %}<meta name="citation_public_url" content="{{ entry.fields['url'] }}">{% endif %}
+	{% if entry.fields['school'] %}<meta name="citation_pdf_url" content="{{ entry.fields['url'] }}">{% endif %}
 	{% if entry.fields['annote'] %}<meta name="citation_language" content="{{ entry.fields['annote'] }}">{%- endif %}
+	{% if entry.fields['abstract'] %}<meta name="citation_abstract" content="{{ entry.fields['abstract'] }}">{%- endif %}
 	
 	<tr>
 		<td>
