--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <title>{{ site.name }}: {{ page.title }}</title>
         <!-- OG info -->
         <meta property="og:site_name" content="LIFS@Hallym"/>
-        <meta property="og:image" content="/img/LIFSReGroupLogo.png">
+        <meta property="og:image" content="https://lifs.hallym.ac.kr/img/LIFSReGroupLogo.png">
         <meta property="og:type" content="blog"/>
         <meta property="og:title" content="{{ page.title }}"/>
         <meta property="og:description" content="The homepage for the Legal Informatics and Forensic Science Institute at Hallym University."/>
