--- a/_includes/person.html
+++ b/_includes/person.html
@@ -35,8 +35,7 @@ person.display_name %} {% endif %} {% if include.image %}
 </div>
 {% else %}
 <div class="person person-without-image">
-	{{ name }}
-	<!-- {% if person.webpage %}
+	{{ name }} {% if person.webpage %}
 	<a href="{{ person.webpage }}"><span class="fas fa-globe"></span></a>
 	{% endif %} {% if person.github %}
 	<a href="{{ person.github }}"><span class="fab fa-github"></span></a>
@@ -50,8 +49,7 @@ person.display_name %} {% endif %} {% if include.image %}
 	<a href="{{ person.youtube }}"><span class="fab fa-youtube"></span></a>
 	{% endif %} {% if person.email %}
 	<a href="{{ person.email }}"><span class="fas fa-envelope"></span></a>
-	{% endif %}  -->
-	{% if person.bio %}
+	{% endif %} {% if person.bio %}
 	<span class="bio">{{person.bio}}</span>
 	{% endif %}
 </div>
