--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,8 +4,41 @@
 		<td>
 			<span class="date">
 				
-				<big><strong>2019</strong></big><br />
+				<big><strong>2020</strong></big><br />
 				
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<a href="/publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining"><span class="fas fa-globe"></span> Abstract</a>
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf">Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining</a>.
+			</span><br />
+			<span class="authors">
+				Sungmi Park.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			<span class="links">
+			</span>
+			<span class="keywords">
+				
+						<span class="badge badge-info">Alternative Hypothesis Retrieval Model</span>
+						<span class="badge badge-info">Argument Mining</span>
+						<span class="badge badge-info">Automatic Argument Element Extraction</span>
+						<span class="badge badge-info">Crime Investigation</span>
+						<span class="badge badge-info">Investigation Verification</span>
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2019</strong></big><br />
 				
 			</span>
 		</td>
@@ -47,7 +80,6 @@
 				
 				<big><strong>2019</strong></big><br />
 				
-				
 			</span>
 		</td>
 		<td class="publication">
@@ -84,7 +116,6 @@
 			<span class="date">
 				
 				<big><strong>2019</strong></big><br />
-				
 				
 			</span>
 		</td>
@@ -123,7 +154,6 @@
 				
 				<big><strong>2019</strong></big><br />
 				
-				
 			</span>
 		</td>
 		<td class="publication">
@@ -151,6 +181,72 @@
 						<span class="badge badge-info">MLAT</span>
 						<span class="badge badge-info">Transnational Crime</span>
 						<span class="badge badge-info">Enforcement.</span>
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2019</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf">A Study on Digital Forensic Data Acquisition Tools</a>.
+			</span><br />
+			<span class="authors">
+				Ji Yoon Ham.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			<span class="links">
+			</span>
+			<span class="keywords">
+				
+						<span class="badge badge-info">Disk Imaging</span>
+						<span class="badge badge-info">Forensic Disk Imaging</span>
+						<span class="badge badge-info">Imaging Features</span>
+			</span>
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+				
+				<big><strong>2019</strong></big><br />
+				
+			</span>
+		</td>
+		<td class="publication">
+			
+			<span class="pubtitle">
+				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
+				<img src="/img/pdficon_small.png" width="16"
+					height="16" alt="PDF" />
+				<a href="https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf">A Study on the Malicious Targeting of IoT Devices</a>.
+			</span><br />
+			<span class="authors">
+				Minjin Park.
+			</span><br />
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
+			<br />
+			<span class="links">
+			</span>
+			<span class="keywords">
+				
+						<span class="badge badge-info">AI smart speaker</span>
+						<span class="badge badge-info">Honeypot</span>
+						<span class="badge badge-info">Internet of Things</span>
+						<span class="badge badge-info">IoT device attack</span>
+						<span class="badge badge-info">IoT Forensic</span>
 			</span>
 			<br />
 		</td>
