--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -9,7 +9,7 @@
 			</span>
 		</td>
 		<td class="publication">
-			
+			<span class="language">[English] </span>
 			<span class="pubtitle">
 				<a href="/publications/2020-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining"><span class="fas fa-globe"></span> Abstract</a>
 				<img src="/img/pdficon_small.png" width="16"
@@ -194,7 +194,7 @@
 			</span>
 		</td>
 		<td class="publication">
-			
+			<span class="language">[English] </span>
 			<span class="pubtitle">
 				<a href="/publications/2019-A_Study_on_Digital_Forensic_Data_Acquisition_Tools"><span class="fas fa-globe"></span> Abstract</a>
 				<img src="/img/pdficon_small.png" width="16"
@@ -226,7 +226,7 @@
 			</span>
 		</td>
 		<td class="publication">
-			
+			<span class="language">[English] </span>
 			<span class="pubtitle">
 				<a href="/publications/2019-A_Study_on_the_Malicious_Targeting_of_IoT_Devices"><span class="fas fa-globe"></span> Abstract</a>
 				<img src="/img/pdficon_small.png" width="16"
